feat: 更新 Spring Boot 到 3.2.0